<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".fragments.MediaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/editTextGradeOne"
            android:layout_width="365dp"
            android:layout_height="55dp"
            android:layout_marginTop="280dp"
            android:ems="10"
            android:hint="@string/gradeOneHint"
            android:inputType="number"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextGradeTwo"
            android:layout_width="365dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/gradeTwoHint"
            android:inputType="number"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextGradeOne" />

        <EditText
            android:id="@+id/editTextGradeThree"
            android:layout_width="365dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/gradeThreeHint"
            android:inputType="number"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextGradeTwo" />

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="373dp"
            android:layout_height="122dp"
            android:layout_marginTop="4dp"
            android:text="@string/status"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.815"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextGradeThree" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:text="@string/textCalculate"
            android:textSize="20sp"
            app:backgroundTint="@color/light_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStatus"
            app:layout_constraintVertical_bias="0.106" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/headerMedia"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>